--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,3 +1,2 @@
-<h1><%= message %></h1>
-<h2><%= error.status %></h2>
-<pre><%= error.stack %></pre>
+<h1><%= locals.message %></h1>
+<h2><%= locals.error.status %></h2>
