--- a/views/sign_up.ejs
+++ b/views/sign_up.ejs
@@ -18,6 +18,10 @@
             <input type="text" name="last_name" class="form-control" id="last_name">
         </div>
         <div class="mb-3">
+            <label for="email" class="form-label">Email:</label>
+            <input type="email" name="email" class="form-control" id="email">
+        </div>
+        <div class="mb-3">
             <label for="password" class="form-label">Password:</label>
             <input type="password" name="password" class="form-control" id="password">
         </div>
