--- a/views/join_club.ejs
+++ b/views/join_club.ejs
@@ -13,6 +13,6 @@
             <input type="text" name="passcode" class="form-control" id="passcode">
         </div>
         <button type="submit" class="btn btn-danger">Submit</button>
-        <a href="/" class="btn btn-success">Do not join</a>
+        <a href="/users/sign_in" class="btn btn-success">Do not join</a>
     </form>
 </div>
