--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -7,6 +7,18 @@
           integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 </head>
 <body>
+<header class="p-3 text-bg-dark mb-3">
+    <div class="d-flex flex-wrap align-items-center justify-content-end">
+        <div class="text-end">
+            <% if (locals.currentUser) { %>
+                <a href="/users/log_out" class="btn btn-warning">Log out</a>
+            <% } else { %>
+                <a href="/users/sign_in" class="btn btn-outline-light me-2">Login</a>
+                <a href="/users/sign_up" class="btn btn-warning">Sign-up</a>
+            <% } %>
+        </div>
+    </div>
+</header>
 <%- body %>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
