--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,2 +1,4 @@
-<h1><%= locals.message %></h1>
-<h2><%= locals.error.status %></h2>
+<div class="container">
+    <h1><%= locals.message %></h1>
+    <h2><%= locals.error.status %></h2>
+</div>
